Security: Remove real webhook URL from .env examples
Changes:
- Replace real webhook URL with placeholder in .env.example
- Replace real webhook URL with placeholder in .env.local.example
- Add SECURITE.md with security analysis and recommendations
- Document why current setup is acceptable but perfectible
- Provide options for enhanced security (API key, rate limiting, etc.)

Security level: MEDIUM (acceptable for MVP/production)
Real URL remains in app/api/chat/route.ts as fallback (expected)

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-# Webhook N8N - URL de production
-NEXT_PUBLIC_WEBHOOK_URL=https://n8n.srv860867.hstgr.cloud/webhook/pierre-qualif-agent
+# Webhook N8N Configuration
+# Remplacer par votre propre URL de webhook N8N
+NEXT_PUBLIC_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
