--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,5 @@
-# Configuration du webhook pour l'agent conversationnel
-NEXT_PUBLIC_WEBHOOK_URL=https://n8n.srv860867.hstgr.cloud/webhook-test/pierre-qualif-agent
+# Configuration locale pour le développement
+# Copier ce fichier en .env.local et remplir avec vos vraies valeurs
+
+# Webhook N8N
+NEXT_PUBLIC_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
