Security: Remove hardcoded webhook URL from code
Breaking change - REQUIRES Netlify configuration:
- Remove hardcoded webhook URL fallback from app/api/chat/route.ts
- Add validation to show clear error if NEXT_PUBLIC_WEBHOOK_URL is not set
- Update .env.example with clear documentation
- Create NETLIFY_ENV_SETUP.md with step-by-step configuration guide
- .env file created locally (not committed, in .gitignore)

IMPORTANT: Before deploying to Netlify:
1. Go to Site settings > Environment variables
2. Add: NEXT_PUBLIC_WEBHOOK_URL = https://n8n.srv860867.hstgr.cloud/webhook/pierre-qualif-agent
3. Redeploy

Without this configuration, chat will show fallback message and log error.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-# Webhook N8N Configuration
-# Remplacer par votre propre URL de webhook N8N
+# Configuration - Variables d'environnement
+
+# Webhook N8N - URL de production
+# OBLIGATOIRE pour que le chat fonctionne
+# À configurer dans Netlify: Site settings > Environment variables
 NEXT_PUBLIC_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
